--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .Button {
+    @apply text-white bg-orange-600 hover:bg-orange-800;
+  }
+}
+
+/* @layer utilities{
+    .text-white{
+        font-size:1rem;
+        font-weight:500;
+    }
+} */
