--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer components {
   .Button {
-    @apply text-white bg-orange-600 hover:bg-orange-800;
+    @apply text-white bg-orange-600 hover:bg-orange-800 rounded font-inter text-body1 capitalize;
   }
   
 }
