--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@
 
 @layer components {
   .Button {
-    @apply text-white bg-orange-600 hover:bg-orange-800;
+    @apply text-white bg-orange-600 hover:bg-orange-800 rounded font-inter text-body1 capitalize;
   }
-  
+  .Service-container {
+    @apply w-44 flex flex-col items-center justify-center;
+  }
 }
 
 /* @layer utilities{
