--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27");
 
 @tailwind base;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #e4e6ed;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #e4e6ed;
+  border-radius: 8px;
+  height: 158px;
+}
 @tailwind components;
 @tailwind utilities;
 
