--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ body {
 }
 
 #swiper-color .swiper-button-next {
-  width:50px;
-  height:50px;
+  width:55px;
+  height:55px;
   position: absolute;
   right:180px;
   background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-next.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LW5leHQuc3ZnIiwiaWF0IjoxNjkzODkwMjkzLCJleHAiOjE3MjU0MjYyOTN9.qifYEDUvnsjj_Yd2aDJbIxTHsHNHWS5ALGQg68xXzeo&t=2023-09-05T05%3A04%3A52.119Z");
@@ -24,22 +24,11 @@ body {
 }
 
 #swiper-color .swiper-button-prev {
-  width:50px;
-  height:50px;
+  width:55px;
+  height:55px;
   position: absolute;
   left:180px;
   background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-prev.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LXByZXYuc3ZnIiwiaWF0IjoxNjkzODkwOTQ3LCJleHAiOjE3MjU0MjY5NDd9.hZnYXZUQfiOsHLTgvHveD2397LTxOV8MaVqIjdKyvr8&t=2023-09-05T05%3A15%3A46.342Z");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  color: transparent
-}
-#swiper-color2 .swiper-button-next {
-  width:60px;
-  height:60px;
-  position: absolute;
-  right:280px;
-  background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-next-orange.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LW5leHQtb3JhbmdlLnN2ZyIsImlhdCI6MTY5MzkwNDg1MiwiZXhwIjoxNzI1NDQwODUyfQ.c-j0pITMKG3N9rA_ZqupRkNIG8qLsHxSZ0hCDtTlKMg&t=2023-09-05T09%3A07%3A31.482Z");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -50,17 +39,6 @@ body {
   width:60px;
   height:60px;
   position: absolute;
-  left:280px;
-  background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-prev-orange.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LXByZXYtb3JhbmdlLnN2ZyIsImlhdCI6MTY5MzkwNDgwNywiZXhwIjoxNzI1NDQwODA3fQ.3OzbgN9qWLjZ5Qx35lnfTDY0lUv6X63EZ1AsavIuZRk&t=2023-09-05T09%3A06%3A46.596Z");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  color: transparent
-}
-#swiper-color3 .swiper-button-prev {
-  width:60px;
-  height:60px;
-  position: absolute;
   left:0px;
   background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-prev-orange.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LXByZXYtb3JhbmdlLnN2ZyIsImlhdCI6MTY5MzkwNDgwNywiZXhwIjoxNzI1NDQwODA3fQ.3OzbgN9qWLjZ5Qx35lnfTDY0lUv6X63EZ1AsavIuZRk&t=2023-09-05T09%3A06%3A46.596Z");
   background-repeat: no-repeat;
@@ -68,7 +46,7 @@ body {
   background-position: center;
   color: transparent;
 }
-#swiper-color3 .swiper-button-next {
+#swiper-color2 .swiper-button-next {
   width:60px;
   height:60px;
   position: absolute;
@@ -79,4 +57,25 @@ body {
   background-position: center;
   color: transparent;
 }
-
+#swiper-single .swiper-button-prev {
+  width:52px;
+  height:52px;
+  position: absolute;
+  left:16px;
+  background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-prev.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LXByZXYuc3ZnIiwiaWF0IjoxNjkzODkwOTQ3LCJleHAiOjE3MjU0MjY5NDd9.hZnYXZUQfiOsHLTgvHveD2397LTxOV8MaVqIjdKyvr8&t=2023-09-05T05%3A15%3A46.342Z");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: transparent;
+}
+#swiper-single .swiper-button-next {
+  width:52px;
+  height:52px;
+  position: absolute;
+  right:16px;
+  background-image: url("https://kewjjbauwpznfmeqbdpp.supabase.co/storage/v1/object/sign/dev-storage/icon/slidebar-arrow-next.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJkZXYtc3RvcmFnZS9pY29uL3NsaWRlYmFyLWFycm93LW5leHQuc3ZnIiwiaWF0IjoxNjkzODkwMjkzLCJleHAiOjE3MjU0MjYyOTN9.qifYEDUvnsjj_Yd2aDJbIxTHsHNHWS5ALGQg68xXzeo&t=2023-09-05T05%3A04%3A52.119Z");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: transparent;
+}
