--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 @layer components {
   .Button {
-    @apply text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize;
+    @apply text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize w-[144px];
   }
   .Service-container {
     @apply w-44 flex flex-col items-center justify-center;
