--- a/src/App.css
+++ b/src/App.css
@@ -83,10 +83,21 @@ body {
 }
 
 #datePicker {
-  border: 2px solid #D6D9E4;
-
+  border: 2px solid #d6d9e4;
   background-color: white;
-
   color: 9AA1B9;
+}
+
+#datePicker tbody>tr>td.slds-is-selected>.slds-day {
+  background: red;
+  color: pink;
+  font-weight: 700;
+}
+::-webkit-calendar-picker-indicator {
+  filter: invert(0.6);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  opacity: 0.7;
 }
 
