--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,11 @@ body {
   background-position: center;
   color: transparent;
 }
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(0.6);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  opacity: 0.7;
+}
