--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@
   .Button {
     @apply text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize w-[144px];
   }
+  .Button-search-result {
+    @apply text-orange-500 bg-white hover:bg-orange-500 hover:text-white hover:border-none active:bg-orange-700 rounded font-inter text-body1 border-2 border-solid border-orange-500 capitalize w-[144px];
+  }
   .Service-container {
     @apply w-44 flex flex-col items-center justify-center;
   }
