--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,9 @@
   .Button-search-result {
     @apply text-orange-500 bg-white hover:bg-orange-500 hover:text-white hover:border-none active:bg-orange-700 rounded font-inter text-body1 border-2 border-solid border-orange-500 capitalize w-[144px];
   }
+  .Button-unavailable {
+    @apply bg-gray-200 text-gray-600 hover:bg-gray-200 cursor-not-allowed;
+  }
   .Service-container {
     @apply w-44 flex flex-col items-center justify-center;
   }
