--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,18 @@ body {
 input[type="date"]::-webkit-calendar-picker-indicator:hover {
   opacity: 0.7;
 }
+
+.css-1u23akw-MuiButtonBase-root-MuiPickersDay-root.Mui-selected:hover {
+    will-change: background-color;
+    background-color: #c44242;
+}
+
+.css-1u23akw-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+    color: #fff;
+    background-color: #c44242;
+    font-weight: 500;
+}
+
+.css-jgls56-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+    border: 1px solid #c44242;
+}
