--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,10 @@
 
 @layer components {
   .Button {
-    @apply text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize w-[144px];
+    @apply min-w-[144px] px-8 text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize;
   }
   .Button-search-result {
-    @apply text-orange-500 bg-white hover:bg-orange-500 hover:text-white hover:border-none active:bg-orange-700 rounded font-inter text-body1 border-2 border-solid border-orange-500 capitalize w-[144px];
+    @apply text-orange-500 bg-white hover:bg-orange-500 hover:text-white hover:border-none active:bg-orange-700 rounded font-inter text-body1 border-2 border-solid border-orange-500 capitalize;
   }
   .Button-unavailable {
     @apply bg-gray-200 text-gray-600 hover:bg-gray-200 cursor-not-allowed;
