--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
     @apply text-gray-600 font-inter text-body1 bg-white border-gray-400 border-2 rounded p-3;
   }
   .InputSuccess {
-    @apply text-black font-inter text-body1 bg-white border-[#c4c4c4] border-2 rounded p-3;
+    @apply text-black font-inter text-body1 bg-white border-[#c4c4c4] border rounded p-3;
   }
   .AddandSubtract {
     @apply relative w-4 h-4 bg-white text-orange-500  rounded-full border border-solid border-orange-500;
