--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 @layer components {
   .Button {
-    @apply min-w-[144px] px-8 text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize;
+    @apply min-w-[144px] px-8 py-4 text-white bg-orange-600 hover:bg-orange-500 active:bg-orange-700 rounded font-inter text-body1 border-none capitalize;
   }
   .Button-search-result {
     @apply text-orange-500 bg-white hover:bg-orange-500 hover:text-white hover:border-none active:bg-orange-700 rounded font-inter text-body1 border-2 border-solid border-orange-500 capitalize;
