--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
     @apply w-44 flex flex-col items-center justify-center;
   }
   .Input {
-    @apply text-gray-600 font-inter text-body1 bg-white border-gray-400 border-2 rounded p-3;
+    @apply text-gray-600 font-inter text-body1 bg-white border-gray-400 border-2 rounded p-3 focus:outline-none focus:border-orange-500;
   }
   .InputSuccess {
     @apply text-black font-inter text-body1 bg-white border-[#c4c4c4] border rounded p-3;
